--- a/main.css
+++ b/main.css
@@ -53,17 +53,32 @@ video {
   /* Hard code w/h for now */
   height: 480px;
   position: absolute;
-  width: 640px;
+  width: 660px;
 }
 
 /* Do it all as one pan keyframe animatin on strip. Also have zoom/scale
 happen at same time toward end to give illusion of momentum. */
 @keyframes sys-to-home {
-  30% {
-    transform: translate3d(-320px, 0, -10px);
+  0% {
+    transform: translate3d(0, 0, 0);
+  }
+  40% {
+    transform: translate3d(0, 0, -40px);
   }
   100% {
-    transform: translate3d(-320px, 0, 0);
+    transform: translate3d(-340px, 0, 0);
+  }
+}
+
+@keyframes sys-from-home {
+  0% {
+    transform: translate3d(-340px, 0, 0);
+  }
+  60% {
+    transform: translate3d(0, 0, -40px);
+  }
+  100% {
+    transform: translate3d(0, 0, 0);
   }
 }
 
@@ -71,16 +86,16 @@ happen at same time toward end to give illusion of momentum. */
   /* Hard code w/h for now */
   height: 480px;
   position: absolute;
+  top: 0;
   width: 320px;
 }
 
 .sys-animate-to-home {
-  animation: sys-to-home 1000ms ease-out forwards;
+  animation: sys-to-home 1100ms cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
 }
 
-#sys-window-home {
-  left: 320px;
-  top: 0;
+.sys-animate-from-home {
+  animation: sys-from-home 1100ms cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
 }
 
 /* RocketBar .rb-
