--- a/main.css
+++ b/main.css
@@ -70,7 +70,7 @@ happen at same time toward end to give illusion of momentum. */
   }
 }
 
-@keyframes sys-from-home {
+@keyframes sys-to-app-from-home {
   0% {
     transform: translate3d(-340px, 0, 0);
   }
@@ -82,6 +82,15 @@ happen at same time toward end to give illusion of momentum. */
   }
 }
 
+@keyframes sys-to-launch-from-home {
+  0% {
+    transform: translate3d(-340px, 0, 0);
+  }
+  100% {
+    transform: translate3d(0, 0, -40px);
+  }
+}
+
 .sys-window {
   /* Hard code w/h for now */
   height: 480px;
@@ -90,12 +99,16 @@ happen at same time toward end to give illusion of momentum. */
   width: 320px;
 }
 
-.sys-animate-to-home {
+.anim-to-home {
   animation: sys-to-home 1100ms cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
 }
+/* 660 */
+.anim-to-app-from-home {
+  animation: sys-to-app-from-home 1100ms cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+}
 
-.sys-animate-from-home {
-  animation: sys-from-home 1100ms cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+.sys-anim-pause {
+  animation-play-state: paused;
 }
 
 /* RocketBar .rb-
