--- a/main.css
+++ b/main.css
@@ -113,16 +113,17 @@ happen at same time toward end to give illusion of momentum. */
   width: 320px;
 }
 
-.state-to-home {
+.state-to-home .sys-windows {
   animation: sys-to-home 1100ms cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
 }
-/* 660 */
-.state-to-app-from-home {
+
+.state-to-app-from-home .sys-windows {
   animation: sys-to-app-from-home 1100ms cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
 }
 
-.state-to-launch {
-  animation: sys-launch 700ms cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+.state-to-app-from-home .sys-window-new {
+  opacity: 0;
+  animation: sys-launch 700ms cubic-bezier(0.165, 0.840, 0.440, 1.000) 1100ms forwards;
 }
 
 /* RocketBar .rb-
