--- a/main.css
+++ b/main.css
@@ -85,23 +85,18 @@ happen at same time toward end to give illusion of momentum. */
   }
 }
 
-@keyframes sys-to-launch-from-home {
-  0% {
-    transform: translate3d(-340px, 0, 0);
-  }
+@keyframes sys-move-over {
   100% {
-    transform: translate3d(0, 0, -40px);
+    transform: translateX(-340px);
   }
 }
 
 @keyframes sys-launch {
   0% {
     opacity: 0;
-    transform: scale(.1);
   }
   100% {
     opacity: 1;
-    transform: scale(1);
   }
 }
 
@@ -118,12 +113,19 @@ happen at same time toward end to give illusion of momentum. */
 }
 
 .state-to-app-from-home .sys-windows {
-  animation: sys-to-app-from-home 1100ms cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+  animation: sys-to-app-from-home 1700ms cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+}
+
+.state-to-app-from-home .sys-window-old {
+  animation: sys-move-over 400ms ease-out 200ms forwards;  
+}
+
+.sys-window-new {
+  opacity: 0;  
 }
 
 .state-to-app-from-home .sys-window-new {
-  opacity: 0;
-  animation: sys-launch 700ms cubic-bezier(0.165, 0.840, 0.440, 1.000) 700ms forwards;
+  animation: sys-launch 700ms cubic-bezier(0.165, 0.840, 0.440, 1.000) 600ms forwards;
 }
 
 /* RocketBar .rb-
